--- a/home/lucas/.config/neofetch/config.conf
+++ b/home/lucas/.config/neofetch/config.conf
@@ -1,5 +1,3 @@
-#!/usr/bin/env bash
-#
 # Neofetch config file
 # https://github.com/dylanaraps/neofetch
 
@@ -11,13 +9,13 @@ print_info() {
     info underline
 
     info "OS" distro
-    info "Model" model
+    info "Host" model
     info "Kernel" kernel
     info "Uptime" uptime
     info "Packages" packages
     info "Shell" shell
     info "Resolution" resolution
-    #info "DE" de
+    info "DE" de
     info "WM" wm
     info "WM Theme" wm_theme
     info "Theme" theme
@@ -28,16 +26,17 @@ print_info() {
     info "GPU" gpu
     info "Memory" memory
 
+    # info "GPU Driver" gpu_driver  # Linux only
     # info "CPU Usage" cpu_usage
     # info "Disk" disk
     # info "Battery" battery
-    info "Font" font
+    # info "Font" font
     # info "Song" song
-    info "Local IP" local_ip
+    # info "Local IP" local_ip
     # info "Public IP" public_ip
     # info "Users" users
     # info "Install Date" install_date
-    info "Locale" locale # This only works on glibc systems.
+    # info "Locale" locale  # This only works on glibc systems.
 
     info line_break
     info cols
@@ -144,25 +143,23 @@ speed_type="bios_limit"
 # Default: 'off'
 # Values: 'on', 'off'.
 # Flag:    --speed_shorthand.
+# NOTE: This flag is not supported in systems with CPU speed less than 1 GHz
 #
 # Example:
 # on:    'i7-6500U (4) @ 3.1GHz'
 # off:   'i7-6500U (4) @ 3.100GHz'
 speed_shorthand="off"
 
-# Shorten the output of the CPU function
+# Enable/Disable CPU brand in output.
 #
-# Default: 'off'
-# Values:  'on', 'off', 'tiny', 'name', 'speed'
-# Flag:    --cpu_shorthand
+# Default: 'on'
+# Values:  'on', 'off'
+# Flag:    --cpu_brand
 #
 # Example:
-# on:    'i7-6500U (4) @ 3.1GHz'
-# off:   'Intel i7-6500U (4) @ 3.1GHz'
-# tiny:  'i7-6500U (4)'
-# name:  'Intel i7-6500U (4)'
-# speed: '3.1GHz'
-cpu_shorthand="off"
+# on:   'Intel i7-6500U'
+# off:  'i7-6500U (4)'
+cpu_brand="on"
 
 # CPU Speed
 # Hide/Show CPU speed.
@@ -197,7 +194,9 @@ cpu_cores="logical"
 # Default: 'off'
 # Values:  'C', 'F', 'off'
 # Flag:    --cpu_temp
-# Supports: Linux
+# Supports: Linux, BSD
+# NOTE: For FreeBSD and NetBSD-based systems, you'll need to enable
+#       coretemp kernel module. This only supports newer Intel processors.
 #
 # Example:
 # C:   'Intel i7-6500U (4) @ 3.1GHz [27.2°C]'
@@ -546,7 +545,7 @@ disk_display="off"
 # Default:  'ascii'
 # Values:   'ascii', 'caca', 'catimg', 'jp2a', 'iterm2', 'off', 'tycat', 'w3m'
 # Flag:     --backend
-image_backend="ascii"
+image_backend="w3m"
 
 # Image Source
 #
@@ -559,7 +558,7 @@ image_backend="ascii"
 # NOTE: 'auto' will pick the best image source for whatever image backend is used.
 #       In ascii mode, distro ascii art will be used and in an image mode, your
 #       wallpaper will be used.
-image_source="auto"
+image_source="/home/lucas/img/lucas/97509.jpg"
 
 
 # Ascii Options
@@ -626,7 +625,7 @@ thumbnail_dir="${XDG_CACHE_HOME:-${HOME}/.cache}/thumbnails/neofetch"
 #
 # See this wiki page to learn about the fit and fill options.
 # https://github.com/dylanaraps/neofetch/wiki/What-is-Waifu-Crop%3F
-crop_mode="normal"
+crop_mode="fit"
 
 # Crop offset
 # Note: Only affects 'normal' crop mode.
@@ -714,14 +713,20 @@ scrot_name="neofetch-$(date +%F-%I-%M-%S-${RANDOM}).png"
 #
 # NOTE: If you'd like another image host to be added to Neofetch.
 #       Open an issue on github.
-image_host="teknik"
+image_host="imgur"
 
 
 # Misc Options
 
+# Stdout mode
+# Turn off all colors and disables image backend (ASCII/Image).
+# Useful for piping into another command.
+# Default: 'off'
+# Values: 'on', 'off'
+stdout="off"
 
 # Config version.
 #
 # NOTE: Don't change this value, neofetch reads this to determine
 # how to handle backwards compatibility.
-config_version="3.2.0"
+config_version="3.3.0"
