--- a/home/lucas/.config/compton.conf
+++ b/home/lucas/.config/compton.conf
@@ -8,7 +8,7 @@
 
 # Backend to use: "xrender" or "glx".
 # GLX backend is typically much faster but depends on a sane driver.
-backend = "glx";
+backend = "xrender";
 
 #################################
 #
@@ -34,7 +34,7 @@ glx-copy-from-front = false;
 # GLX backend: Avoid rebinding pixmap on window damage.
 # Probably could improve performance on rapid window content changes, but is known to break things on some drivers (LLVMpipe).
 # Recommended if it works.
-# glx-no-rebind-pixmap = true;
+glx-no-rebind-pixmap = true;
 
 
 # GLX backend: GLX buffer swap method we assume.
@@ -48,6 +48,7 @@ glx-copy-from-front = false;
 # Partially breaks --resize-damage.
 # Defaults to undefined.
 glx-swap-method = "undefined";
+# glx-swap-method = "copy";
 
 #################################
 #
@@ -64,13 +65,13 @@ no-dock-shadow = true;
 # Zero the part of the shadow's mask behind the window. Fix some weirdness with ARGB windows.
 clear-shadow = true;
 # The blur radius for shadows. (default 12)
-shadow-radius = 5;
+shadow-radius = 7;
 # The left offset for shadows. (default -15)
-shadow-offset-x = -5;
+shadow-offset-x = -7;
 # The top offset for shadows. (default -15)
-shadow-offset-y = -5;
+shadow-offset-y = -7;
 # The translucency for shadows. (default .75)
-shadow-opacity = 0.5;
+shadow-opacity = 0.65;
 
 # Set if you want different colour shadows
 # shadow-red = 0.0;
@@ -114,7 +115,7 @@ shadow-ignore-shaped = false;
 opacity-rule = [ "95:class_g *= 'Telegram'","0:_NET_WM_STATE@:32a *= '_NET_WM_STATE_HIDDEN'" ];
 
 menu-opacity = 1;
-inactive-opacity = 0.9;
+inactive-opacity = 0.85;
 active-opacity = 1;
 frame-opacity = 1;
 inactive-opacity-override = false;
@@ -144,7 +145,7 @@ blur-background-exclude = [
 # Fade windows during opacity changes.
 fading = true;
 # The time between steps in a fade in milliseconds. (default 10).
-fade-delta = 10;
+fade-delta = 15;
 # Opacity change between steps while fading in. (default 0.028).
 fade-in-step = 0.03;
 # Opacity change between steps while fading out. (default 0.03).
@@ -188,7 +189,8 @@ refresh-rate = 0;
 # opengl-swc: Try to VSync with SGI_swap_control OpenGL extension. Only work on some drivers. Works only with GLX backend. Known to be most effective on many drivers. Does not actually control paint timing, only buffer swap is affected, so it doesn’t have the effect of --sw-opti unlike other methods. Experimental.
 # opengl-mswc: Try to VSync with MESA_swap_control OpenGL extension. Basically the same as opengl-swc above, except the extension we use.
 # (Note some VSync methods may not be enabled at compile time.)
-vsync = "opengl-swc";
+# vsync = "opengl-swc";
+vsync = "none";
 
 # Enable DBE painting mode, intended to use with VSync to (hopefully) eliminate tearing.
 # Reported to have no effect, though.
@@ -204,7 +206,8 @@ sw-opti = true;
 # Unredirect all windows if a full-screen opaque window is detected, to maximize performance for full-screen windows, like games.
 # Known to cause flickering when redirecting/unredirecting windows.
 # paint-on-overlay may make the flickering less obvious.
-unredir-if-possible = true;
+# unredir-if-possible = true;
+unredir-if-possible = false;
 
 # Specify a list of conditions of windows that should always be considered focused.
 focus-exclude = [ ];
