--- a/home/lucas/.config/i3/config
+++ b/home/lucas/.config/i3/config
@@ -290,18 +290,15 @@ bindsym $mod+r mode "resize"
 
 set $polybar ~/.config/polybar/launch.sh
 
-#exec --no-startup-id ~/bin/wallpaper.sh -r
-exec --no-startup-id ~/bin/unsplash.sh
 exec_always --no-startup-id $polybar
+exec --no-startup-id ~/bin/unsplash.sh
 exec --no-startup-id compton -b
-#exec --no-startup-id conky
 exec --no-startup-id dunst
 exec --no-startup-id clipit
 exec --no-startup-id sudo headsetcontrol 64
-exec_always --no-startup-id xautolock.sh
 exec --no-startup-id xset r rate 300 75
 exec --no-startup-id thunar --daemon
 exec --no-startup-id dropbox
-#exec --no-startup-id deluge
 exec --no-startup-id firefox-developer
+exec --no-startup-id xautolock.sh
 
