modified:   home/lucas/.config/i3/config 	modified:   home/lucas/.config/polybar/config 	modified:   home/lucas/.config/systemd/user/ngrok.service 	new file:   home/lucas/.config/systemd/user/screenlock.service 	new file:   home/lucas/.local/bin/lockscreen 	new file:   home/lucas/.local/bin/xautolock 	modified:   home/lucas/.xprofile

--- a/home/lucas/.config/polybar/config
+++ b/home/lucas/.config/polybar/config
@@ -215,7 +215,7 @@ label-background = ${colors.azul2}
 
 ;format-padding = 2
 
-exec = ~/.config/polybar/scripts/btc.sh coinbase
+exec = ~/.config/polybar/scripts/btc.sh
 
 ;----------------------------------------------------------
 ;		        V O L U M E
