--- a/home/lucas/.config/i3/config
+++ b/home/lucas/.config/i3/config
@@ -300,5 +300,5 @@ exec --no-startup-id xset r rate 300 75
 exec --no-startup-id thunar --daemon
 exec --no-startup-id dropbox
 exec --no-startup-id firefox-developer
-exec --no-startup-id xautolock.sh
+exec --no-startup-id ~/.local/bin/xautolock
 
