new file:   home/lucas/.config/bspwm/bspwmrc 	modified:   home/lucas/.config/compton.conf 	new file:   home/lucas/.config/dunst/nord 	modified:   home/lucas/.config/i3/config 	new file:   home/lucas/.config/polybar/bspwm 	new file:   home/lucas/.config/polybar/bspwm.sh 	renamed:    home/lucas/.config/polybar/config -> home/lucas/.config/polybar/i3 	renamed:    home/lucas/.config/polybar/launch.sh -> home/lucas/.config/polybar/i3.sh 	new file:   home/lucas/.config/polybar/nord 	new file:   home/lucas/.config/rofi/nord.rasi 	renamed:    home/lucas/bin/rofi_alarme.sh -> home/lucas/.config/rofi/scripts/alarme 	modified:   home/lucas/.config/rofi/scripts/configs 	new file:   home/lucas/.config/rofi/scripts/configs.bspwm 	new file:   home/lucas/.config/rofi/scripts/fap 	new file:   home/lucas/.config/rofi/scripts/power.bspwm 	new file:   home/lucas/.config/sxhkd/sxhkdrc 	new file:   home/lucas/.config/sxhkd/sxhkdrc.jaagr 	modified:   home/lucas/.config/termite/config 	new file:   home/lucas/.config/termite/config.old2 	new file:   home/lucas/.config/termite/config.save 	modified:   home/lucas/.local/bin/lockscreen 	modified:   home/lucas/.local/bin/xautolock 	modified:   home/lucas/bin/alarme.sh 	copied:     home/lucas/bin/unsplash.sh -> home/lucas/bin/ligthdm-unsplash.sh 	renamed:    home/lucas/bin/unsplash.old.sh -> home/lucas/bin/old1-unsplash.sh 	renamed:    home/lucas/bin/unsplash_bg.sh -> home/lucas/bin/old2-unsplash.sh 	new file:   home/lucas/bin/old3-unsplash.sh 	modified:   home/lucas/bin/screencast.sh 	modified:   home/lucas/bin/unsplash.sh 	modified:   home/lucas/bin/wallpaper.sh

--- a/home/lucas/.config/i3/config
+++ b/home/lucas/.config/i3/config
@@ -288,7 +288,7 @@ bindsym $mod+r mode "resize"
 #    }
 #}
 
-set $polybar ~/.config/polybar/launch.sh
+set $polybar ~/.config/polybar/i3.sh
 
 exec_always --no-startup-id $polybar
 exec --no-startup-id ~/bin/unsplash.sh
