--- a/home/lucas/.config/compton.conf
+++ b/home/lucas/.config/compton.conf
@@ -8,7 +8,7 @@
 
 # Backend to use: "xrender" or "glx".
 # GLX backend is typically much faster but depends on a sane driver.
-backend = "xrender";
+backend = "glx";
 
 #################################
 #
@@ -29,7 +29,7 @@ glx-copy-from-front = false;
 # My tests on nouveau shows a 200% performance boost when only 1/4 of the screen is updated.
 # May break VSync and is not available on some drivers.
 # Overrides --glx-copy-from-front.
-# glx-use-copysubbuffermesa = true;
+#glx-use-copysubbuffermesa = true;
 
 # GLX backend: Avoid rebinding pixmap on window damage.
 # Probably could improve performance on rapid window content changes, but is known to break things on some drivers (LLVMpipe).
@@ -115,7 +115,7 @@ shadow-ignore-shaped = false;
 opacity-rule = [ "95:class_g *= 'Telegram'","0:_NET_WM_STATE@:32a *= '_NET_WM_STATE_HIDDEN'" ];
 
 menu-opacity = 1;
-inactive-opacity = 0.85;
+inactive-opacity = 0.90;
 active-opacity = 1;
 frame-opacity = 1;
 inactive-opacity-override = false;
