--- a/home/lucas/.config/polybar/config
+++ b/home/lucas/.config/polybar/config
@@ -1,1 +1,316 @@
-gamehelp
+;----------------------------------------------------------
+;		        C O L O R S
+;----------------------------------------------------------
+[colors]
+background = #2B303B
+current-line = #44475a
+selection = #44475a
+foreground = #8B9CAD
+cyan = #8be9fd
+green = #50fa7b
+orange = #ffb86c
+pink = #ff79c6
+purple = #bd93f9
+red = #ff5555
+yellow = #f1fa8c
+white = #F1F1F1
+black = #2B303B
+borders = #4c566a
+selected = #191b21
+
+; Nord Theme
+azul1 = #5e81ac
+azul2 = #81a1c1
+vermelho = #bf616a
+laranja = #d08770
+amarelo = #ebcb8b
+verde = #a3be8c
+rosa = #ff4279
+branco1 = #d8dee9
+branco2 = #e5e9f0
+branco3 = #eceff4
+cinza1 = #2e3440
+cinza2 = #3b4252
+cinza3 = #434c5e
+cinza4 = #4c566a
+
+;----------------------------------------------------------
+;					G E N E R A L
+;----------------------------------------------------------
+[bar/top]
+monitor = ${env:MONITOR:DVI-I-0}
+width = 100%
+height = 35 
+offset-x = 0
+offset-y = -1 
+;bottom = true
+
+background = #5a000000
+foreground = #eee
+
+underline-size = 2
+underline-color = #eee
+
+spacing = 1
+padding-left = 0
+padding-right = 0
+module-margin-left = 0 
+module-margin-right = 0
+
+font-0 = NotoSans:pixelsize=12;3
+font-1 = FontAwesome:size=10;2
+
+modules-left = bspwm focus
+modules-center = 
+modules-right = mpd firefox thunar termite telegram whatsapp volume date power
+
+;tray-position = right
+;tray-padding = 2
+;tray-background = #66333333
+
+wm-restack = bspwm
+
+scroll-up = bspwm-desknext
+scroll-down = bspwm-deskprev
+
+;----------------------------------------------------------
+;					B S P W M
+;----------------------------------------------------------
+[module/bspwm]
+type = internal/bspwm
+
+; IC              
+; WS I II III IV V VI VII VIII IX X
+ws-icon-0 = I;
+ws-icon-1 = II;
+ws-icon-2 = III;
+ws-icon-3 = IV;
+ws-icon-4 = V;
+ws-icon-5 = VI;
+ws-icon-6 = VII;
+ws-icon-7 = VIII;
+ws-icon-8 = IX;
+ws-icon-9 = X;
+ws-icon-default = 
+
+format = <label-state> <label-mode>
+
+label-focused = %icon%
+label-focused-background = #88000000
+label-focused-underline= #ddd
+label-focused-padding = 4
+
+label-occupied = %icon%
+label-occupied-padding = 4
+
+label-urgent = %icon%
+label-urgent-padding = 4
+
+label-empty = %icon%
+label-empty-foreground = #44ffffff
+label-empty-padding = 4
+
+;----------------------------------------------------------
+;					W I N D O W
+;----------------------------------------------------------
+[module/focus]
+type = custom/script
+interval = 0.5
+label =   %output:0:40:...%
+click-left = ~/.config/polybar/scripts/janela.sh -i 
+click-middle = ~/.config/polybar/scripts/janela.sh -c 
+click-right = ~/.config/polybar/scripts/janela.sh -w 
+exec = ~/.config/polybar/scripts/janela.sh 
+
+;----------------------------------------------------------
+;					M P D
+;----------------------------------------------------------
+[module/mpd]
+type = internal/mpd
+
+host = 127.0.0.1
+port = 6600
+;password = mysecretpassword
+
+; Seconds to sleep between progressbar/song timer sync
+; Default: 1
+interval = 2
+
+; Available tags:
+;   <label-song> (default)
+;   <label-time>
+;   <bar-progress>
+;   <toggle> - gets replaced with <icon-(pause|play)>
+;   <toggle-stop> - gets replaced with <icon-(stop|play)>
+;   <icon-random>
+;   <icon-repeat>
+;   <icon-repeatone>
+;   <icon-consume>
+;   <icon-prev>
+;   <icon-stop>
+;   <icon-play>
+;   <icon-pause>
+;   <icon-next>
+;   <icon-seekb>
+;   <icon-seekf>
+;format-online = <label-song> <label-time> <icon-prev> <icon-seekb> <icon-stop> <toggle> <icon-seekf> <icon-next>  <icon-repeat> <icon-random> <bar-progress>
+format-online = <label-song> <label-time> <icon-prev> <icon-stop> <toggle> <icon-next> <icon-repeat> <icon-random>
+;format-playing = ${self.format-online}
+;format-paused = ${self.format-online}
+format-paused = " <toggle>"
+;format-stopped = ${self.format-online}
+format-stopped = " <toggle>"
+
+; Available tags:
+;   <label-offline>
+format-offline = <label-offline>
+
+; Available tokens:
+;   %artist%
+;   %album%
+;   %date%
+;   %title%
+; Default: %artist% - %title%
+label-song = " %artist% - %title%"
+
+; Available tokens:
+;   %elapsed%
+;   %total%
+; Default: %elapsed% / %total%
+label-time = "%elapsed% / %total%"
+
+; Available tokens:
+;   None
+label-offline = 
+
+; Only applies if <icon-X> is used
+icon-play = 
+icon-pause = 
+icon-stop = 
+icon-prev = 
+icon-next = 
+icon-seekb = 
+icon-seekf = 
+icon-random = 🔀
+icon-repeat = 
+icon-repeatone = 🔂
+icon-consume = ✀
+
+; Used to display the state of random/repeat/repeatone
+; Only applies if <icon-[random|repeat|repeatone]> is used
+toggle-on-foreground = #fff
+toggle-off-foreground = #555
+
+; Only applies if <bar-progress> is used
+bar-progress-width = 8
+bar-progress-indicator = |
+bar-progress-fill = ─
+bar-progress-empty = ─
+
+scroll-up = mpc next
+scroll-down = mpc prev
+
+;----------------------------------------------------------
+;					L A U N C H E R S
+;----------------------------------------------------------
+[module/firefox]
+type = custom/text
+content = 
+content-padding = 2
+click-left = firefox-developer &
+
+[module/thunar]
+type = custom/text
+content = 
+content-padding = 2
+click-left = thunar &
+
+[module/termite]
+type = custom/text
+content = 
+content-padding = 2
+click-left = termite &
+
+[module/telegram]
+type = custom/text
+content = 
+content-padding = 2
+click-left = telegram-desktop &
+
+[module/whatsapp]
+type = custom/text
+content = 
+content-padding = 2
+click-left = Whatsapp &
+
+;----------------------------------------------------------
+;					V O L U M E
+;----------------------------------------------------------
+[module/volume]
+type = internal/volume
+
+format-volume = <ramp-volume>  <label-volume>
+format-muted = <label-muted>
+label-volume = %percentage%
+label-muted =   muted
+label-muted-foreground = #aaa
+format-volume-padding = 2
+format-muted-padding = 2
+
+ramp-volume-0 = 
+ramp-volume-1 = 
+ramp-volume-2 = 
+ramp-headphones-0 = 
+
+;----------------------------------------------------------
+;					D A T E
+;----------------------------------------------------------
+[module/date]
+type = internal/date
+interval = 1.0
+
+date = 
+time = %H:%M
+
+date-alt = %d/%m/%Y
+time-alt = %H:%M:%S
+
+label = %date% %time%
+format =  <label>
+format-padding = 2
+
+;----------------------------------------------------------
+;		    P O W E R   M E N U
+;----------------------------------------------------------
+[module/power]
+type = custom/menu
+
+format-padding = 2
+
+label-open = " "
+label-close = 
+label-separator = |
+
+menu-0-0 = "suspender"
+menu-0-0-exec = menu-open-1
+
+menu-0-1 = "reiniciar"
+menu-0-1-exec = menu-open-2
+
+menu-0-2 = "desligar"
+menu-0-2-exec = menu-open-3
+
+menu-0-3 = "sair"
+menu-0-3-exec = menu-open-4
+
+menu-1-0 = "SUSPENDER?"
+menu-1-0-exec = systemctl suspend
+
+menu-2-0 = "REINICIAR?"
+menu-2-0-exec = systemctl reboot
+
+menu-3-0 = "DESLIGAR?"
+menu-3-0-exec = systemctl poweroff
+
+menu-4-0 = "SAIR?"
+menu-4-0-exec = bspc quit
