--- a/home/lucas/.config/termite/config
+++ b/home/lucas/.config/termite/config
@@ -47,7 +47,8 @@ cursor_shape = block
 
 [colors]
 foreground = #D8DEE9
-background = #2E3440
+background          = rgba(46, 52, 64, 0.9)
+#background = #2E3440
 foreground_bold = #D8DEE9
 cursor = #D8DEE9
 cursor_foreground = #2E3440
