--- a/home/lucas/.config/i3/config
+++ b/home/lucas/.config/i3/config
@@ -3,7 +3,7 @@ gaps inner 10
 hide_edge_borders both
 force_display_urgency_hint 0
 workspace_auto_back_and_forth yes
-new_window pixel 2
+new_window pixel 3
 # smart|urgent|focus|none
 #focus_on_window_activation focus
 #focus_follows_mouse no
@@ -229,8 +229,6 @@ assign [class="(Whatsie|Whatsapp)"] $workspace9
 assign [class="^Hexchat"] $workspace9
 assign [class="^Gtkman"] $workspace10
 assign [class="^Mate-disk-usage-analyzer"] $workspace10
-#assign [class="^Pamac-updater"] $workspace10
-#assign [class="^Pamac-manager"] $workspace10
 assign [class="(^Pamac*|Notes|Lxtask)"] $workspace10
 
 mode "[s]air, [d]esligar, [r]einiciar, [s]uspender" {
@@ -260,45 +258,14 @@ mode "resize" {
 }
 bindsym $mod+r mode "resize"
 
-#bar {
-#	font pango:Monospace, FontAwesome 10
-#	tray_output none
-#	status_command i3blocks
-	
-#	# Fundo Transparente
-#	#i3bar_command i3bar -t
-	
-#	position top
-#	height 25
-#	strip_workspace_numbers yes
-	
-#	colors {
-#		statusline			$branco1
-		
-#		# Fundo Transparente
-#		#background			$transparente
-		
-#		background			$cinza2
-#		separator			$branco1
-		
-#		# 					Borda			Fundo			Texto
-#		focused_workspace	$cinza2			$cinza2			$azul4
-#		inactive_workspace	$cinza2			$cinza2			$branco1
-#		urgent_workspace	$cinza2			$cinza2			$vermelho
-#    }
-#}
-
 set $polybar ~/.config/polybar/i3.sh
 
 exec_always --no-startup-id $polybar
-exec --no-startup-id ~/bin/unsplash.sh
+exec --no-startup-id ~/bin/wallpaper.sh -d
 exec --no-startup-id compton -b
 exec --no-startup-id dunst
 exec --no-startup-id clipit
 exec --no-startup-id sudo headsetcontrol 64
 exec --no-startup-id xset r rate 300 75
 exec --no-startup-id thunar --daemon
-exec --no-startup-id dropbox
-exec --no-startup-id firefox-developer
 exec --no-startup-id ~/.local/bin/xautolock
-
