--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ mpd.log
 mpd.pid
 mpd.state 
 mpd.db
+weathercfg.py
 home/lucas/.config/i3/scripts/mail
 home/lucas/.config/i3/scripts/wallpaper
 home/lucas/.config/polybar/gmail/
