modified:   .gitignore 	deleted:    home/lucas/.config/polybar/scripts/__pycache__/weathercfg.cpython-36.pyc

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ weathercfg.py
 home/lucas/.config/i3/scripts/mail
 home/lucas/.config/i3/scripts/wallpaper
 home/lucas/.config/polybar/gmail/
+__pycache__
