--- a/home/lucas/.config/compton.conf
+++ b/home/lucas/.config/compton.conf
@@ -112,23 +112,32 @@ shadow-ignore-shaped = false;
 #
 #################################
 
-opacity-rule = [ "95:class_g *= 'Telegram'","0:_NET_WM_STATE@:32a *= '_NET_WM_STATE_HIDDEN'" ];
+opacity-rule = [ 
+	"100:name = 'Termite'",
+	"90:class_g *= 'Telegram'",
+	"0:_NET_WM_STATE@:32a *= '_NET_WM_STATE_HIDDEN'" 
+];
 
 menu-opacity = 1;
 inactive-opacity = 0.80;
 active-opacity = 1;
 frame-opacity = 1;
-inactive-opacity-override = false;
+inactive-opacity-override = true;
 alpha-step = 0.06;
 
+#################################
+#
+# Blur & Dim
+#
+#################################
 # Dim inactive windows. (0.0 - 1.0)
-# inactive-dim = 0.2;
+inactive-dim = 0.5;
 # Do not let dimness adjust based on window opacity.
-# inactive-dim-fixed = true;
+inactive-dim-fixed = true;
 # Blur background of transparent windows. Bad performance with X Render backend. GLX backend is preferred.
-# blur-background = true;
+blur-background = true;
 # Blur background of opaque windows with transparent frames as well.
-# blur-background-frame = true;
+blur-background-frame = true;
 # Do not let blur radius adjust based on window opacity.
 blur-background-fixed = false;
 blur-background-exclude = [
@@ -194,9 +203,9 @@ vsync = "none";
 
 # Enable DBE painting mode, intended to use with VSync to (hopefully) eliminate tearing.
 # Reported to have no effect, though.
-dbe = false;
+dbe = true;
 # Painting on X Composite overlay window. Recommended.
-paint-on-overlay = true;
+paint-on-overlay = false;
 
 # Limit compton to repaint at most once every 1 / refresh_rate second to boost performance.
 # This should not be used with --vsync drm/opengl/opengl-oml as they essentially does --sw-opti's job already,
