--- a/home/lucas/.config/polybar/config
+++ b/home/lucas/.config/polybar/config
@@ -57,7 +57,8 @@ padding-right = 0
 module-margin-left = 0 
 module-margin-right = 0
 
-font-0 = NotoSans:pixelsize=12;3
+font-0 = Moon 2.0:pixelsize=15;3
+font-2 = NotoSans:pixelsize=12;3
 font-1 = FontAwesome:size=10;2
 
 modules-left = bspwm focus
