modified:   home/lucas/.config/Thunar/scripts/videocut 	modified:   home/lucas/.config/i3/config 	modified:   home/lucas/.config/polybar/scripts/anews.py 	modified:   home/lucas/.config/polybar/scripts/weather.py 	new file:   home/lucas/.vim/autoload/plug.vim

--- a/home/lucas/.config/i3/config
+++ b/home/lucas/.config/i3/config
@@ -215,7 +215,7 @@ for_window [window_role="Preferences"] floating enable, move position center
 for_window [window_type="dialog"] floating enable, move position center
 for_window [window_type="menu"] floating enable, move position center
 
-for_window [class="(Mate-font-viewer|mpv|Catfish|Engrampa|File-roller|Notes|Agave|Viewnior|Pavucontrol|Galculator)"] floating enable, move position center
+for_window [class="(Mate-font-viewer|mpv|Catfish|Engrampa|File-roller|Notes|Agave|Viewnior|Pavucontrol|Galculator|YAD|VideoCut)"] floating enable, move position center
 for_window [class="Lxtask" title="Gerenciador de tarefas"] floating enable, resize set 800 px 600 px, move position center
 for_window [class="^VirtualBox" title="*Executando*"] floating enable
 for_window [class="^etcher-electron"] floating enable
