new file:   home/lucas/.config/dunst/icons/moon.svg 	modified:   home/lucas/.config/i3/config 	new file:   home/lucas/.config/polybar/scripts/moonphase.py 	modified:   home/lucas/.config/polybar/scripts/weather.py 	modified:   home/lucas/.config/polybar/trans.i3 	new file:   home/lucas/.local/share/fonts/moon_phases.ttf 	modified:   home/lucas/bin/moonphase.py 	modified:   home/lucas/bin/syshw.sh

--- a/home/lucas/.config/i3/config
+++ b/home/lucas/.config/i3/config
@@ -107,9 +107,9 @@ set $workspace2 "2:"
 set $workspace3 "3:"
 set $workspace4 "4:"
 set $workspace5 "5:"
-set $workspace6 "6:"
-set $workspace7 "7:"
-set $workspace8 "8:"
+set $workspace6 "6:"
+set $workspace8 "7:"
+set $workspace7 "8:"
 set $workspace9 "9:"
 set $workspace10 "10:"
 
@@ -241,4 +241,5 @@ exec --no-startup-id sudo headsetcontrol 64
 exec --no-startup-id xset r rate 300 75
 exec --no-startup-id thunar --daemon
 exec --no-startup-id ~/.local/bin/xautolock
+exec --no-startup-id numlockx on
 exec_always --no-startup-id xrdb ~/.Xresources
