modified:   .gitignore 	modified:   home/lucas/.config/i3/config 	modified:   home/lucas/.config/polybar/i3 	modified:   home/lucas/.config/polybar/scripts/crypto.py 	new file:   home/lucas/.config/polybar/scripts/imap.py 	new file:   home/lucas/.config/polybar/trans-clean.i3 	modified:   home/lucas/.config/polybar/trans.i3 	new file:   home/lucas/.config/rofi/scripts/fb 	new file:   home/lucas/.config/rofi/scripts/finder 	new file:   home/lucas/.local/bin/fm 	modified:   home/lucas/.local/bin/screenshot 	new file:   home/lucas/.local/bin/wallpaper-cycle 	new file:   home/lucas/bin/crypto.py

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,8 @@ mpd.state
 mpd.db
 weathercfg.py
 weathercfg.pyc
+imapcfg.py
+imapcfg.pyc
 home/lucas/.config/i3/scripts/mail
 home/lucas/.config/i3/scripts/wallpaper
 home/lucas/.config/polybar/gmail/
