--- a/home/lucas/.config/i3/config
+++ b/home/lucas/.config/i3/config
@@ -33,8 +33,8 @@ bindsym $mod+Shift+q kill
 bindsym $mod+q kill
 
 # Rofi
-bindsym $mod+g exec --no-startup-id echo "" | rofi -theme ~/.local/share/rofi/themes/sistematico-dark.rasi -dmenu -p "Google: " -bw 0 -lines 1 -separator-style none -location 0 -width 250 -hide-scrollbar -padding 5 | xargs -I{} xdg-open https://www.google.com.br/search?q={}
-bindsym $mod+Shift+g exec --no-startup-id echo "" | rofi -theme ~/.local/share/rofi/themes/sistematico-dark.rasi -dmenu -p "DuckDuckGo: " -bw 0 -lines 1 -separator-style none -location 0 -width 250 -hide-scrollbar -padding 5 | xargs -I{} xdg-open https://duckduckgo.com/?q={}
+bindsym $mod+g exec --no-startup-id echo "" | rofi -theme ~/.local/share/rofi/themes/sistematico-dark.rasi -dmenu -p "Google: " -bw 0 -lines 1 -separator-style none -location 0 -width 250 -hide-scrollbar -padding 5 | xargs -I{} brsr https://www.google.com.br/search?q={}
+bindsym $mod+Shift+g exec --no-startup-id echo "" | rofi -theme ~/.local/share/rofi/themes/sistematico-dark.rasi -dmenu -p "DuckDuckGo: " -bw 0 -lines 1 -separator-style none -location 0 -width 250 -hide-scrollbar -padding 5 | xargs -I{} brsr https://duckduckgo.com/?q={}
 bindsym --release Mod1+g exec --no-startup-id exec ~/.config/rofi/scripts/git
 
 bindsym $mod+Shift+w exec --no-startup-id ~/.config/rofi/scripts/janelas
@@ -108,9 +108,9 @@ set $workspace3 "3:"
 set $workspace4 "4:"
 set $workspace5 "5:"
 set $workspace6 "6:"
-set $workspace8 "7:"
-set $workspace7 "8:"
-set $workspace9 "9:"
+set $workspace8 "7:"
+set $workspace7 "8:"
+set $workspace9 "9:"
 set $workspace10 "10:"
 
 # Alt+TAB & Alt+Shift+TAB	
@@ -194,9 +194,9 @@ assign [class="^Lxappearance"] $workspace5
 assign [class="^Deadbeef"] $workspace6
 assign [class="^Gmpc"] $workspace6
 assign [class="^Deluge"] $workspace7
-assign [class="^Thunderbird"] $workspace8
+assign [class="^Thunderbird"] $workspace7
+assign [class="(Whatsie|Whatsapp|whatsapp-desktop)"] $workspace8
 assign [class="^Telegram"] $workspace9
-assign [class="(Whatsie|Whatsapp)"] $workspace9
 assign [class="^Hexchat"] $workspace9
 assign [class="^Gtkman"] $workspace10
 assign [class="^Mate-disk-usage-analyzer"] $workspace10
@@ -240,6 +240,7 @@ exec --no-startup-id clipit
 exec --no-startup-id sudo headsetcontrol 64
 exec --no-startup-id xset r rate 300 75
 exec --no-startup-id thunar --daemon
-exec --no-startup-id ~/.local/bin/xautolock
+exec --no-startup-id thunar
 exec --no-startup-id numlockx on
-exec_always --no-startup-id xrdb ~/.Xresources
+exec --no-startup-id ~/.local/bin/xautolock
+exec --no-startup-id xrdb ~/.Xresources
