modified:   home/lucas/.config/ncmpcpp/config 	modified:   home/lucas/.config/polybar/i3 	modified:   home/lucas/.config/polybar/scripts/ufw.sh 	modified:   home/lucas/.config/polybar/scripts/wallpaper.sh 	new file:   home/lucas/.config/rofi/alert.rasi 	modified:   home/lucas/.config/rofi/scripts/wallpaper 	new file:   home/lucas/.local/share/rofi/themes/alert.rasi 	new file:   home/lucas/bin/a 	modified:   screenshot.png 	modified:   screenshot2.png

--- a/home/lucas/.config/ncmpcpp/config
+++ b/home/lucas/.config/ncmpcpp/config
@@ -12,7 +12,6 @@ song_columns_list_format = "(12)[white]{a}(85)[red]{t} (5)[cyan]{l}"
 autocenter_mode = "yes"
 centered_cursor = "yes"
 
-
 # Bars
 # progressbar_look = "⠒⠒⠐"
 # progressbar_look = "━━╸"
@@ -48,6 +47,8 @@ progressbar_elapsed_color = "white"
 statusbar_color = "white"
 
 # Others
+execute_on_song_change = notify-send -i "/usr/share/icons/gnome/48x48/mimetypes/sound.png" "Now Playing ♫" "$(mpc current)"
+empty_tag_marker=" -- NENHUMA TAG -- "
 song_window_title_format = "%a - %t"
 search_engine_display_mode = "columns"
 follow_now_playing_lyrics = "yes"
