modified:   home/lucas/.config/i3/config 	modified:   home/lucas/.config/polybar/config 	new file:   home/lucas/.config/polybar/cores/amarelo 	new file:   home/lucas/.config/polybar/cores/azul 	new file:   home/lucas/.config/polybar/cores/branco 	new file:   home/lucas/.config/polybar/cores/verde 	new file:   home/lucas/.config/polybar/cores/vermelho 	deleted:    home/lucas/.config/polybar/i3 	new file:   home/lucas/.config/polybar/launch.sh 	new file:   home/lucas/.config/polybar/principal 	new file:   home/lucas/.config/polybar/scripts/amarelo.sh 	new file:   home/lucas/.config/polybar/scripts/azul.sh 	new file:   home/lucas/.config/polybar/scripts/branco.sh 	modified:   home/lucas/.config/polybar/scripts/ufw.sh 	new file:   home/lucas/.config/polybar/scripts/uptime.sh 	new file:   home/lucas/.config/polybar/scripts/verde.sh 	new file:   home/lucas/.config/polybar/scripts/vermelho.sh 	modified:   home/lucas/.config/polybar/trans-clean.i3 	modified:   home/lucas/.config/polybar/trans.i3 	modified:   home/lucas/.config/rofi/scripts/configs 	modified:   home/lucas/.local/bin/beats.sh 	deleted:    home/lucas/.local/bin/fm 	modified:   home/lucas/.local/bin/screencast 	modified:   home/lucas/.local/bin/steam-launcher 	modified:   home/lucas/.tmux.conf 	modified:   home/lucas/.xprofile

--- a/home/lucas/.config/i3/config
+++ b/home/lucas/.config/i3/config
@@ -188,6 +188,7 @@ assign [class="(^Steam)"] $workspace6
 assign [class="(Gtkman|MedleyText)"] $workspace7
 assign [class="(Whatsie|Whatsapp|whatsapp-desktop)"] $workspace8
 assign [class="(^Telegram|^Hexchat)"] $workspace9
+assign [class="(dontstarve_steam)"] $workspace10
 
 mode "[s]air, [d]esligar, [r]einiciar, [s]uspender" {
 	bindsym s exec i3-msg exit
@@ -216,11 +217,8 @@ mode "resize" {
 }
 bindsym $mod+r mode "resize"
 
-#xrdb ~/.Xresources
-set $polybar ~/.config/polybar/i3.sh
+set $polybar ~/.config/polybar/launch.sh
 exec_always --no-startup-id $polybar
-#exec --no-startup-id ~/bin/wallpaper.sh -d
-#exec_always --no-startup-id feh --bg-fill ~/.local/share/backgrounds/carmine-de-fazio-31543.jpg
 exec_always --no-startup-id feh --bg-fill "$(cat ~/.wall)"
 exec --no-startup-id compton -b
 exec --no-startup-id dunst
@@ -228,9 +226,6 @@ exec --no-startup-id clipit
 exec --no-startup-id sudo headsetcontrol 64
 exec --no-startup-id xset r rate 300 75
 exec --no-startup-id thunar --daemon
-#exec --no-startup-id thunar
-#exec --no-startup-id ~/apps/medley-latest.AppImage
-#exec --no-startup-id firefox-developer-edition
 exec --no-startup-id numlockx on
 exec --no-startup-id ~/.local/bin/xautolock
 exec --no-startup-id xrdb ~/.Xresources
