--- a/home/lucas/.tmux.conf
+++ b/home/lucas/.tmux.conf
@@ -72,16 +72,62 @@ send-keys -t:9 'man tmux' C-m
 # Troca o índice de 0 pra 1
 select-window -t 1
 
-#source "/usr/lib/python3.6/site-packages/powerline/bindings/tmux/powerline.conf"
-#source "/usr/share/tmux/powerline.conf"
+# panes
+set -g pane-border-fg black
+set -g pane-active-border-fg black
+
+# Keybindings for layouts; M is alt
+bind-key  M-1 select-layout even-horizontal
+bind-key  M-2 select-layout even-vertical
+bind-key  M-3 select-layout main-horizontal
+bind-key  M-4 select-layout main-vertical
+bind-key  M-5 select-layout tiled
+
+# status line
+set -g status-justify centre
+set -g status-bg default
+set -g status-fg white
+set -g status-interval 4
+
+# messaging
+set -g message-attr bold
+set -g message-fg white
+set -g message-bg red
+set -g message-command-fg blue
+set -g message-command-bg black
+
+# window status
+if '[ -z "$DISPLAY" ]' 'setw -g window-status-format " #F#I:#W "'
+if '[ -z "$DISPLAY" ]' 'setw -g window-status-current-format " #F#I:#W "'
+setw -g window-status-format "#[fg=brightblack]#[bg=default] #I #[bg=default]#[fg=brightblack] #W "
+setw -g window-status-current-format "#[fg=brightwhite]#[bg=default] #I #[fg=brightwhite]#[bg=default] #W "
+setw -g window-status-current-bg default
+setw -g window-status-current-fg white
+setw -g window-status-current-attr bold
+setw -g window-status-bg default
+setw -g window-status-fg black
+setw -g window-status-attr dim
+#setw -g window-status-content-bg black
+#setw -g window-status-content-fg black
+#setw -g window-status-content-attr bold
+set -g status-justify centre
+# Info on left (no session display)
+set -g status-left ''
+
+# Info on right
+set -g status-right-attr bold
+#set -g status-right '#[fg=brightwhite]%a %H:%M'
+set -g status-right ''
+#set -g status-right '#[fg=brightyellow]Vol: #(sh ~/Scripts/tmux/volume)   #[fg=brightgreen]%a %H:%M '
+set -g status-right-length 60
 
 # TPM
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-sensible'
+#set -g @plugin 'tmux-plugins/tpm'
+#set -g @plugin 'tmux-plugins/tmux-sensible'
 
 # Nord Theme
 # https://github.com/arcticicestudio/nord-tmux
-set -g @plugin 'arcticicestudio/nord-tmux'
+#set -g @plugin 'arcticicestudio/nord-tmux'
 
 # Other examples:
 # set -g @plugin 'github_username/plugin_name'
@@ -89,4 +135,4 @@ set -g @plugin 'arcticicestudio/nord-tmux'
 # set -g @plugin 'git@bitbucket.com/user/plugin'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run '~/.tmux/plugins/tpm/tpm'
+#run '~/.tmux/plugins/tpm/tpm'
