--- a/home/lucas/.config/polybar/config
+++ b/home/lucas/.config/polybar/config
@@ -9,8 +9,8 @@ trans = #66000000
 foreground = #D8DEE9
 background = #2E3440
 unfocused = #a8adb5
-urgent = #d08770
-destaque = #bf616a
+urgent = #BF616A
+destaque = #5e81ac
 ;----------------------------------------------------------
 ;		        S E T T I N G S
 ;----------------------------------------------------------
@@ -299,7 +299,8 @@ label-separator = "  "
 label-open-foreground = ${colors.destaque}
 
 menu-0-0 = 
-menu-0-0-exec = firefox-developer-edition &
+menu-0-0-exec = qutebrowser &
+;menu-0-0-exec = firefox-developer-edition &
 
 menu-0-1 = 
 menu-0-1-exec = thunar &
